--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "[0.9238795325112867, 0, 0, 0.3826834323650898]"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,16 +434,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.9238795325112867, 0, 0, 0.3826834323650898]"
+       "[0.7071067811865476, 0, 0, 0.7071067811865475]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,12 +479,12 @@
     "  \n",
     "  return [np.cos(theta / 2)] + [np.sin(theta / 2) * component for component in unit_axis]\n",
     "\n",
-    "quat_rotate_z(np.pi/4)\n"
+    "quat_rotate_z(np.pi/2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,26 +507,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pos_target:  [ 0.          0.34824951 -1.7635912 ]\n",
-      "Joint angles:  [3.40035409 5.37574653 1.07264704]\n"
+      "Pos_target:  [0, 0.015916560997032314, -0.041471782558546166]\n",
+      "Joint angles:  [4.32371971 3.18601754 3.04193417]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<robotic._robotic.Frame at 0x7f0538a38230>"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -538,6 +528,7 @@
     "  q0 = q[0]\n",
     "  q1 = q[1]\n",
     "  \n",
+    "  # Method 1: \n",
     "  y_P_blue_red = np.sin(q0)\n",
     "  z_P_blue_red = np.cos(q0)\n",
     "  \n",
@@ -547,9 +538,13 @@
     "  # now to get pos of red rel to green, we add pos of red rel to blue with pos of blue to green\n",
     "  y_P_green_red = y_P_blue_red + y_P_green_blue\n",
     "  z_P_green_red = z_P_blue_red + z_P_green_blue\n",
+    "  # return np.array( [0, y_P_green_red, z_P_green_red] )\n",
     "  \n",
-    "  \n",
-    "  return np.array( [0, y_P_green_red, z_P_green_red] )\n",
+    "  # Method 2\n",
+    "  y = np.sin(q0) + np.sin(q0+q1)\n",
+    "  z = np.cos(q0) + np.cos(q0+q1)\n",
+    "  return ([ 0, y, z ])\n",
+    "\n",
     "\n",
     "# this is the target that my FK function has output for the current iteration\n",
     "pos_target = forward_kinematics(joint_angles)\n",
@@ -564,16 +559,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<robotic._robotic.Frame at 0x7f0552b17370>"
+       "<robotic._robotic.Frame at 0x7ff159607630>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,6 +578,47 @@
     "q = np.zeros(C.getJointDimension())\n",
     "C.setJointState(q)\n",
     "target.setPosition( [0,0,0] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Jacobian(q):\n",
+    "    q0 = q[0]\n",
+    "    q1 = q[1]\n",
+    "\n",
+    "    # y = sin(q0) + sin(q0+q1) = sin(q0) + sin(q0)*cos(q1) + sin(q1)*cos(q0)\n",
+    "    # z = cos(q0) + cos(q0+q1) = cos(q0) + cos(q0)*cos(q1) - sin(q0)*sin(q1)\n",
+    "\n",
+    "    j = np.zeros((2, 2))\n",
+    "\n",
+    "    j[0][0] = np.cos(q0) + np.cos(q0)*np.cos(q1) - np.sin(q0)*np.sin(q1)\n",
+    "    j[0][1] = -np.sin(q0)*np.sin(q1) + np.sin(q1)*np.cos(q0)\n",
+    "    j[1][0] = -np.sin(q0) - np.sin(q0)*np.cos(q1) - np.cos(q0)*np.sin(q1)\n",
+    "    j[1][1] = -np.sin(q1)*np.cos(q0) - np.cos(q1)*np.sin(q0)\n",
+    "\n",
+    "    return j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.01474768  0.0207258 ]\n",
+      " [-0.00604877  0.92214929]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Jacobian([1.95205226, 3.15753276, 0]))"
    ]
   }
  ],
