Now starting hw2

--- a/Tutorial_02/part2.ipynb
+++ b/Tutorial_02/part2.ipynb
@@ -342,9 +342,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ time: 0.083621, evals: 21, done: 1, feasible: 1, sos: 1.28333, f: 0, ineq: 0, eq: 0.0058449 }\n",
+      "size of path: (66, 13)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## solve for waypoints: create a komo instance, create nlp instance, then call generic solver\n",
     "\n",
@@ -355,15 +374,25 @@
     "q = komo.getPath()\n",
     "print('size of path:', q.shape)\n",
     "\n",
-    "komo.view(False, \"result\")\n",
-    "komo.view_play(True, .5)\n"
+    "komo.view(False, \"result\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "komo.view_play(True, .5)"
    ]
@@ -378,9 +407,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "====nlp==== method:AugmentedLagrangian bounded: yes\n",
+      "==nlp== it:0 evals:0 mu:1 nu:1 muLB:0.1\n",
+      "==nlp== it:   0  evals:  11  A(x):    1.11009  f:    0.98701  g:          0  h:    2.69981  |x-x'|:    1.19775 \tstop:DeltaConverge\n",
+      "==nlp== it:   1  evals:  11  A(x):    1.84855  mu:5\n",
+      "==nlp== it:   1  evals:  18  A(x):    1.26829  f:    1.20226  g:          0  h:   0.617665  |x-x'|:   0.123862 \tstop:DeltaConverge\n",
+      "==nlp== it:   2  evals:  18  A(x):    1.42346  mu:25\n",
+      "==nlp== it:   2  evals:  20  A(x):    1.28967  f:    1.28297  g:          0  h:   0.049356  |x-x'|:  0.0205945 \tstop:DeltaConverge\n",
+      "==nlp== it:   3  evals:  20  A(x):    1.29629  mu:125\n",
+      "==nlp== it:   3  evals:  21  A(x):     1.2858  f:    1.28529  g:          0  h: 0.00627223  |x-x'|: 0.00632252 \tstop:DeltaConverge\n",
+      "==nlp== StoppingCriterion Delta<0.01\n",
+      "{ time: 0.052748, evals: 21, done: 1, feasible: 1, sos: 1.28529, f: 0, ineq: 0, eq: 0.00627223 }\n"
+     ]
+    }
+   ],
    "source": [
     "komo = S.getKomo_path(C, stepsPerPhase=30, accScale=1e0, lenScale=1e-2, homingScale=1e-1, collScale=1e0)\n",
     "nlp = komo.nlp()\n",
