--- a/Tutorial_02/part3.ipynb
+++ b/Tutorial_02/part3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +25,22 @@
       "physx/motorKd: 1000,\n",
       "botsim/engine: physx,\n",
       "physx/multibody,\n",
+      "bot/useGripper,\n",
+      "bot/blockRealRobot!,\n",
+      "botsim/tau: 0.01,\n",
+      "botsim/hyperSpeed: 1,\n",
+      "physx/verbose: 1,\n",
+      "physx/yGravity!,\n",
+      "physx/softBody!,\n",
+      "physx/multiBody,\n",
+      "physx/multiBodyDisableGravity,\n",
+      "physx/jointedBodies!,\n",
+      "physx/angularDamping: 0.1,\n",
+      "physx/defaultFriction: 1,\n",
+      "physx/defaultRestitution: 0.1,\n",
+      "sim/displayVisualsOnly,\n",
+      "bot/useOptitrack!,\n",
+      "bot/useAudio!,\n",
       "botsim/verbose: 2,\n",
       "physx/motorKp: 10000,\n",
       "physx/motorKd: 1000,\n",
@@ -43,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +68,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -98,9 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-- bot.cpp:~BotOp:135(0) shutting down BotOp...\n",
+      "-- simulation.cpp:~BotThreadedSim:57(0) shutting down SimThread\n",
+      "-- simulation.cpp:~Simulation:148(0) shutting down Simulation\n"
+     ]
+    }
+   ],
    "source": [
     "del bot\n",
     "del C"
@@ -108,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "timeToEnd: -6.889999999993648\n",
-      "timeToEnd: 1.095718942064991\n",
-      "timeToEnd: 2.191437884129982\n"
+      "timeToEnd: -10.574281057932701\n",
+      "timeToEnd: 1.0957189420649769\n",
+      "timeToEnd: 2.1914378841299538\n"
      ]
     }
    ],
@@ -168,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,33 +218,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.000513, evals: 6, done: 1, feasible: 1, sos: 0.00652719, f: 0, ineq: 0, eq: 0.00118533 }\n",
-      "{ time: 0.000368, evals: 4, done: 1, feasible: 1, sos: 0.00500819, f: 0, ineq: 0, eq: 0.000429767 }\n",
-      "{ time: 0.000661, evals: 3, done: 1, feasible: 1, sos: 0.00523536, f: 0, ineq: 0, eq: 0.00306094 }\n",
-      "{ time: 0.000283, evals: 3, done: 1, feasible: 1, sos: 0.00547257, f: 0, ineq: 0, eq: 0.00239756 }\n",
-      "{ time: 0.000338, evals: 4, done: 1, feasible: 1, sos: 0.00477203, f: 0, ineq: 0, eq: 0.000322985 }\n",
-      "{ time: 0.000298, evals: 3, done: 1, feasible: 1, sos: 0.00420615, f: 0, ineq: 0, eq: 0.00166338 }\n",
-      "{ time: 0.000289, evals: 3, done: 1, feasible: 1, sos: 0.00456321, f: 0, ineq: 0, eq: 0.00316212 }\n",
-      "{ time: 0.000329, evals: 4, done: 1, feasible: 1, sos: 0.00435149, f: 0, ineq: 0, eq: 0.000236083 }\n",
-      "{ time: 0.000336, evals: 4, done: 1, feasible: 1, sos: 0.00462514, f: 0, ineq: 0, eq: 0.000190021 }\n",
-      "{ time: 0.000322, evals: 4, done: 1, feasible: 1, sos: 0.00517754, f: 0, ineq: 0, eq: 0.000168511 }\n",
-      "{ time: 0.000462, evals: 3, done: 1, feasible: 1, sos: 0.00412675, f: 0, ineq: 0, eq: 0.000973858 }\n",
-      "{ time: 0.000382, evals: 4, done: 1, feasible: 1, sos: 0.0041336, f: 0, ineq: 0, eq: 0.000257439 }\n",
-      "{ time: 0.000376, evals: 4, done: 1, feasible: 1, sos: 0.00484506, f: 0, ineq: 0, eq: 0.000399568 }\n",
-      "{ time: 0.000298, evals: 3, done: 1, feasible: 1, sos: 0.0038813, f: 0, ineq: 0, eq: 0.000809086 }\n",
-      "{ time: 0.000326, evals: 3, done: 1, feasible: 1, sos: 0.00362135, f: 0, ineq: 0, eq: 0.00166588 }\n",
-      "{ time: 0.000305, evals: 3, done: 1, feasible: 1, sos: 0.00387036, f: 0, ineq: 0, eq: 0.00308064 }\n",
-      "{ time: 0.000334, evals: 4, done: 1, feasible: 1, sos: 0.00445147, f: 0, ineq: 0, eq: 0.00022826 }\n",
-      "{ time: 0.000295, evals: 3, done: 1, feasible: 1, sos: 0.00400147, f: 0, ineq: 0, eq: 0.00337042 }\n",
-      "{ time: 0.000496, evals: 3, done: 1, feasible: 1, sos: 0.00415178, f: 0, ineq: 0, eq: 0.0038574 }\n",
-      "{ time: 0.000336, evals: 4, done: 1, feasible: 1, sos: 0.00609466, f: 0, ineq: 0, eq: 0.000541189 }\n"
+      "{ time: 0.004539, evals: 6, done: 1, feasible: 1, sos: 0.00698135, f: 0, ineq: 0, eq: 0.00124554 }\n",
+      "{ time: 0.000235, evals: 3, done: 1, feasible: 1, sos: 0.00372664, f: 0, ineq: 0, eq: 0.00247761 }\n",
+      "{ time: 0.000139, evals: 3, done: 1, feasible: 1, sos: 0.00331079, f: 0, ineq: 0, eq: 0.00221915 }\n",
+      "{ time: 0.000156, evals: 4, done: 1, feasible: 1, sos: 0.00298197, f: 0, ineq: 0, eq: 0.000590664 }\n",
+      "{ time: 0.000146, evals: 3, done: 1, feasible: 1, sos: 0.00254628, f: 0, ineq: 0, eq: 0.0016094 }\n",
+      "{ time: 0.000444, evals: 4, done: 1, feasible: 1, sos: 0.0036348, f: 0, ineq: 0, eq: 0.000453148 }\n",
+      "{ time: 0.000462, evals: 3, done: 1, feasible: 1, sos: 0.00355159, f: 0, ineq: 0, eq: 0.00267651 }\n",
+      "{ time: 0.000236, evals: 4, done: 1, feasible: 1, sos: 0.00408879, f: 0, ineq: 0, eq: 0.000340867 }\n",
+      "{ time: 0.000156, evals: 4, done: 1, feasible: 1, sos: 0.00502846, f: 0, ineq: 0, eq: 0.00065324 }\n",
+      "{ time: 0.000134, evals: 3, done: 1, feasible: 1, sos: 0.00497715, f: 0, ineq: 0, eq: 0.00421624 }\n",
+      "{ time: 0.000264, evals: 3, done: 1, feasible: 1, sos: 0.0041938, f: 0, ineq: 0, eq: 0.00364251 }\n",
+      "{ time: 0.00025, evals: 4, done: 1, feasible: 1, sos: 0.00405891, f: 0, ineq: 0, eq: 0.000387978 }\n",
+      "{ time: 0.000119, evals: 2, done: 1, feasible: 1, sos: 0.00415315, f: 0, ineq: 0, eq: 0.0028647 }\n",
+      "{ time: 0.000456, evals: 4, done: 1, feasible: 1, sos: 0.00400635, f: 0, ineq: 0, eq: 0.00025116 }\n",
+      "{ time: 0.00014, evals: 3, done: 1, feasible: 1, sos: 0.00350319, f: 0, ineq: 0, eq: 0.00150681 }\n",
+      "{ time: 0.000197, evals: 4, done: 1, feasible: 1, sos: 0.00300014, f: 0, ineq: 0, eq: 0.000533804 }\n",
+      "{ time: 0.000239, evals: 3, done: 1, feasible: 1, sos: 0.00318098, f: 0, ineq: 0, eq: 0.00249295 }\n",
+      "{ time: 0.000149, evals: 3, done: 1, feasible: 1, sos: 0.00370832, f: 0, ineq: 0, eq: 0.00391127 }\n",
+      "{ time: 0.000198, evals: 3, done: 1, feasible: 1, sos: 0.00343152, f: 0, ineq: 0, eq: 0.00146802 }\n",
+      "{ time: 0.000179, evals: 3, done: 1, feasible: 1, sos: 0.00310451, f: 0, ineq: 0, eq: 0.0027719 }\n"
      ]
     }
    ],
@@ -251,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "rai_venv",
    "language": "python",
    "name": "python3"
   },
