--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<robotic._robotic.Frame at 0x7f29141b4330>"
+       "0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
     "C.addFile(ry.raiPath('Question-01/environment/cargobot.g'))\n",
     "C.addFile(ry.raiPath('Question-01/environment/maze.g'))\n",
     "\n",
-    "# C.view()"
+    "C.view()"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.1 Part A: gripper to cargo handle position KOMO_1"
+    "### 1.1 Part A: gripper to cargo handle position KOMO_1"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -134,21 +134,28 @@
    "source": [
     "# C.attach(\"l_gripper\", \"cargo_handle\")\n",
     "# del komo\n",
-    "C.getFrame(\"base_origin\").setPosition([1.7, -1.6, 0.1])\n",
-    "C.getFrame(\"base_origin\").setQuaternion([1, 0, 0, 0])\n",
-    "C.view()"
+    "# C.getFrame(\"base_origin\").setPosition([1.7, -1.6, 0.1])\n",
+    "# C.getFrame(\"base_origin\").setQuaternion([1, 0, 0, 0])\n",
+    "# C.view()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Part A: l_panda_base to goal position KOMO_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.003898, evals: 26, done: 1, feasible: 1, sos: 0.299865, f: 0, ineq: 0, eq: 0 }\n"
+      "{ time: 0.008145, evals: 26, done: 1, feasible: 1, sos: 0.299811, f: 0, ineq: 0, eq: 0 }\n"
      ]
     }
    ],
@@ -196,6 +203,20 @@
     "    C.view(False, f'waypoint {t}')\n",
     "    time.sleep(0.1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Part B: RRT pathfinding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
