Ok lol works now... that was a close one

--- a/hw2/hw2.ipynb
+++ b/hw2/hw2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -76,17 +76,17 @@
     }
    ],
    "source": [
-    "# komo = ry.KOMO(C, phases=1, slicesPerPhase=30, kOrder=1, enableCollisions=False)\n",
-    "komo = ry.KOMO()\n",
-    "komo.setConfig(C, True)\n",
-    "komo.setTiming(1., 20, 5., 0)\n",
+    "# komo_1 = ry.KOMO(C, phases=1, slicesPerPhase=30, kOrder=1, enableCollisions=False)\n",
+    "komo_1 = ry.KOMO()\n",
+    "komo_1.setConfig(C, True)\n",
+    "komo_1.setTiming(1., 20, 5., 0)\n",
     "\n",
     "# add collision constraints\n",
-    "komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e-1])\n",
-    "komo.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
+    "komo_1.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e-1])\n",
+    "komo_1.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "\n",
     "# move the gripper to the cargo position\n",
-    "komo.addObjective(\n",
+    "komo_1.addObjective(\n",
     "    times=[],\n",
     "    feature=ry.FS.positionDiff,\n",
     "    frames=[\"l_gripper\", \"cargo_handle\"],\n",
@@ -94,7 +94,7 @@
     "    scale=[1e1]\n",
     ")\n",
     "\n",
-    "# komo.addObjective(\n",
+    "# komo_1.addObjective(\n",
     "#     times=[],\n",
     "#     feature=ry.FS.positionDiff,\n",
     "#     frames=[\"l_gripper\", \"cargo_handle\"],\n",
@@ -103,13 +103,13 @@
     "# )\n",
     "\n",
     "# align the grippper with the cargo_handle\n",
-    "komo.addObjective([], ry.FS.scalarProductXZ, ['l_gripper', 'cargo_handle'], ry.OT.eq, [1e1])\n",
-    "# komo.addObjective([], ry.FS.scalarProductXY, ['l_panda_base', 'cargo_handle'], ry.OT.eq, [1e1])\n",
+    "komo_1.addObjective([], ry.FS.scalarProductXZ, ['l_gripper', 'cargo_handle'], ry.OT.eq, [1e1])\n",
+    "# komo_1.addObjective([], ry.FS.scalarProductXY, ['l_panda_base', 'cargo_handle'], ry.OT.eq, [1e1])\n",
     "\n",
     "\n",
     "\n",
-    "ret = ry.NLP_Solver(komo.nlp(), verbose=0 ) .solve()\n",
-    "q_gripper_to_cargo = komo.getPath()\n",
+    "ret_1 = ry.NLP_Solver(komo_1.nlp(), verbose=0 ) .solve()\n",
+    "q_gripper_to_cargo = komo_1.getPath()\n",
     "\n",
     "# for t in range(q_gripper_to_cargo.shape[0]):\n",
     "#     C.setJointState(q_gripper_to_cargo[t])\n",
@@ -117,7 +117,7 @@
     "#     time.sleep(0.1)\n",
     "\n",
     "# C.view()\n",
-    "if ret.feasible:\n",
+    "if ret_1.feasible:\n",
     "    print(\"KOMO_1 is feasible\")\n",
     "else:\n",
     "    print(\"KOMO_1 is NOT feasible\")"
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -144,27 +144,27 @@
     }
    ],
    "source": [
-    "komo = ry.KOMO(C, phases=1, slicesPerPhase=20, kOrder=1, enableCollisions=False)\n",
+    "komo_2 = ry.KOMO(C, phases=1, slicesPerPhase=20, kOrder=1, enableCollisions=False)\n",
     "# komo = ry.KOMO()\n",
-    "# komo.setConfig(C, True)\n",
-    "# komo.setTiming(1., 20, 5., kOrder=1)\n",
+    "# komo_2.setConfig(C, True)\n",
+    "# komo_2.setTiming(1., 20, 5., kOrder=1)\n",
     "\n",
     "# add control objective to stay close to the initial joint configuration\n",
-    "komo.addControlObjective([], 0, 1e-1)\n",
+    "komo_2.addControlObjective([], 0, 1e-1)\n",
     "\n",
     "# add collision constraints\n",
-    "komo.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq)\n",
+    "komo_2.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq)\n",
     "\n",
     "# Add objective to move cargo to goal area\n",
-    "komo.addObjective(\n",
+    "komo_2.addObjective(\n",
     "    times=[0., 1.],\n",
     "    feature=ry.FS.positionDiff,\n",
     "    frames=[\"l_panda_base\", \"goal_area\"],\n",
     "    type=ry.OT.sos\n",
     ")\n",
     "\n",
-    "ret = ry.NLP_Solver(komo.nlp(), verbose=0 ) .solve()\n",
-    "q_cargobot_to_goal_area = komo.getPath()\n",
+    "ret_2 = ry.NLP_Solver(komo_2.nlp(), verbose=0 ) .solve()\n",
+    "q_cargobot_to_goal_area = komo_2.getPath()\n",
     "\n",
     "\n",
     "\n",
@@ -173,7 +173,7 @@
     "#     C.view(False, f'waypoint {t}')\n",
     "#     time.sleep(0.1)\n",
     "\n",
-    "if ret.feasible:\n",
+    "if ret_2.feasible:\n",
     "    print(\"KOMO_2 is feasible\")\n",
     "else:\n",
     "    print(\"KOMO_2 is NOT feasible\")"
@@ -188,23 +188,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KOMO_1 is feasible\n",
+      "KOMO_2 is feasible\n"
+     ]
+    }
+   ],
    "source": [
-    "for t in range(q_gripper_to_cargo.shape[0]):\n",
-    "    C.setJointState(q_gripper_to_cargo[t])\n",
-    "    C.view(False, f'waypoint {t}')\n",
-    "    time.sleep(0.1)\n",
+    "# for t in range(q_gripper_to_cargo.shape[0]):\n",
+    "#     C.setJointState(q_gripper_to_cargo[t])\n",
+    "#     C.view(False, f'waypoint {t}')\n",
+    "#     time.sleep(0.1)\n",
     "    \n",
-    "for t in range(q_cargobot_to_goal_area.shape[0]):\n",
-    "    C.setJointState(q_cargobot_to_goal_area[t])\n",
-    "    C.view(False, f'waypoint {t}')\n",
-    "    time.sleep(0.1)\n",
+    "# for t in range(q_cargobot_to_goal_area.shape[0]):\n",
+    "#     C.setJointState(q_cargobot_to_goal_area[t])\n",
+    "#     C.view(False, f'waypoint {t}')\n",
+    "#     time.sleep(0.1)\n",
     "\n",
     "# C.setJointState(qHome)\n",
     "# C.view()\n",
-    "# komo.view_play(False, 2)"
+    "\n",
+    "if ret_1.feasible:\n",
+    "    print(\"KOMO_1 is feasible\")\n",
+    "else:\n",
+    "    print(\"KOMO_1 is NOT feasible\")\n",
+    "\n",
+    "if ret_2.feasible:\n",
+    "    print(\"KOMO_2 is feasible\")\n",
+    "else:\n",
+    "    print(\"KOMO_2 is NOT feasible\")\n",
+    "\n",
+    "# komo_1.view_play(False, 1)\n",
+    "# komo_2.view_play(False, 1)"
    ]
   },
   {
@@ -216,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -247,9 +268,9 @@
     "while (not foundRRTPath and numOfTrials < 15):\n",
     "  rrt = ry.PathFinder()\n",
     "  rrt.setProblem(C, [qHome], [q_gripper_to_cargo[0]])\n",
-    "  ret = rrt.solve()\n",
-    "  path = ret.x\n",
-    "  foundRRTPath = ret.feasible\n",
+    "  ret_RRT_1 = rrt.solve()\n",
+    "  path = ret_RRT_1.x\n",
+    "  foundRRTPath = ret_RRT_1.feasible\n",
     "  numOfTrials = numOfTrials + 1\n",
     "  # print(\"*** Trial num #\", numOfTrials, \" result: \", foundRRTPath)\n",
     "  \n",
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,48 +310,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RRT queries=403 tree sizes = 9 60\n",
-      "RRT queries=696 tree sizes = 23 77\n",
-      "RRT queries=989 tree sizes = 33 98\n",
-      "RRT queries=1258 tree sizes = 38 116\n",
-      "RRT queries=1539 tree sizes = 51 130\n",
-      "RRT queries=1844 tree sizes = 67 149\n",
-      "RRT queries=2149 tree sizes = 87 164\n",
-      "RRT queries=2412 tree sizes = 97 175\n",
-      "RRT queries=2723 tree sizes = 119 190\n",
-      "RRT queries=3034 tree sizes = 145 201\n",
-      "RRT queries=3399 tree sizes = 180 221\n",
-      "RRT queries=3809 tree sizes = 231 240\n",
-      "  -- rrt success: queries:3885 tree sizes: 243 245\n",
-      "  path-length=228\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
       "*** Found path at trial num # 1  ***\n"
      ]
     }
    ],
    "source": [
     "ry.params_clear()\n",
-    "ry.params_add({'rrt/stepsize':.1, 'rrt/verbose': 4}) #verbose=3 makes it very slow, and displays result, and verbose=4 waits keypress..\n",
+    "ry.params_add({'rrt/stepsize':.1, 'rrt/verbose': 0}) #verbose=3 makes it very slow, and displays result, and verbose=4 waits keypress..\n",
     "\n",
     "foundRRTPath = False\n",
     "numOfTrials = 0\n",
     "\n",
-    "rrt = ry.PathFinder()\n",
+    "C.setJointState(q_gripper_to_cargo[0])\n",
     "\n",
-    "while (not foundRRTPath and numOfTrials < 10):\n",
+    "while (not foundRRTPath and numOfTrials < 25):\n",
+    "  rrt = ry.PathFinder()\n",
     "  rrt.setProblem(C, [q_gripper_to_cargo[0]], [q_cargobot_to_goal_area[0]])\n",
-    "  ret = rrt.solve()\n",
-    "  path = ret.x\n",
-    "  foundRRTPath = ret.feasible\n",
+    "  ret_RRT_2 = rrt.solve()\n",
+    "  path = ret_RRT_2.x\n",
+    "  foundRRTPath = ret_RRT_2.feasible\n",
     "  numOfTrials = numOfTrials + 1\n",
     "  # print(\"*** Trial num #\", numOfTrials, \" result: \", foundRRTPath)\n",
     "  \n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
+    "print()\n",
     "\n",
     "if foundRRTPath:\n",
     "  print(\"*** Found path at trial num #\", numOfTrials, \" ***\")\n",
@@ -340,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
